files/yaml/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: REPLACE_NAMESPACE
  name: REPLACE_POD_NAME
  labels:
    app: REPLACE_POD_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: REPLACE_POD_NAME
  template:
    metadata:
      labels:
        app: REPLACE_POD_NAME
        role: minion
    spec:
      containers:
      - name: minion
        image: REPLACE_IMAGE
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 8002
