files/yaml/deploy_cpod.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: nxt-REPLACE_NAMESPACE
  name: REPLACE_POD_NAME
  labels:
    app: REPLACE_POD_NAME
spec:
  replicas: REPLACE_REPLICAS
  selector:
    matchLabels:
      app: REPLACE_POD_NAME
  serviceName: REPLACE_POD_NAME
  template:
    metadata:
      annotations:
        sidecar.istio.io/statsInclusionPrefixes: listener,cluster.outbound,cluster.inbound,cluster.http2,cluster_manager,listener_manager,http_mixer_filter,tcp_mixer_filter,server,cluster.xds-grpc
        # All the above stats are just for debugging, but the below stats is enabled
        # so that envoy health checking works properly, or so is claimed by the below link
        # https://github.com/istio/istio/issues/10537
        sidecar.istio.io/statsInclusionSuffixes: upstream_cx_total
        # add nxt custom stats dimension
        sidecar.istio.io/extraStatTags: nxt_session,nxt_for,nxt_srcAgent,nxt_srcPod,nxt_srcCluster,nxt_destCluster,nxt_uuid
      labels:
        app: REPLACE_POD_NAME
        role: minion
    spec:
      containers:
      - name: minion
        image: REPLACE_IMAGE
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 8080
        - containerPort: 8888
      - name: jaeger-agent
        image: jaegertracing/jaeger-agent:1.24.0  # The agent version should match the operator version
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5775
            name: zk-compact-trft
            protocol: UDP
          - containerPort: 5778
            name: config-rest
            protocol: TCP
          - containerPort: 6831
            name: jg-compact-trft
            protocol: UDP
          - containerPort: 6832
            name: jg-binary-trft
            protocol: UDP
          - containerPort: 14271
            name: admin-http
            protocol: TCP
        args:
          - --reporter.grpc.host-port=dns:///otlmtry-collector-headless.nxt-REPLACE_NAMESPACE.svc.cluster.local:14250
          - --reporter.type=grpc
      imagePullSecrets:
      - name: regcred
