files/yaml/apod_headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: REPLACE_POD_NAME
  namespace: nxt-REPLACE_NAMESPACE
  labels:
    app: REPLACE_POD_NAME
    monitoring: nxt-prometheus-metrics
spec:
  ports:
  - name: nxt-metrics
    port: 8888
    protocol: TCP
    targetPort: 8888
  clusterIP: None
  selector:
    app: REPLACE_POD_NAME
