files/yaml/cpod_headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: REPLACE_POD_NAME
  namespace: nxt-REPLACE_NAMESPACE
  labels:
    app: REPLACE_POD_NAME
spec:
  ports:
  - port: 8080
    name: http
  clusterIP: None
  selector:
    app: REPLACE_POD_NAME
