files/yaml/route_reflector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route-reflector
  namespace: nxt-REPLACE_NAMESPACE
  labels:
    app: route-reflector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: route-reflector
  template:
    metadata:
      labels:
        app: route-reflector
        role: cwatch
    spec:
      containers:
      - name: route-reflector
        image: REPLACE_IMAGE
        ports:
        - containerPort: 80
        imagePullPolicy: REPLACE_PULL_POLICY
        stdin: true 
        tty: true 
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: route-ref
  namespace: nxt-REPLACE_NAMESPACE
  labels:
    app: route-reflector
spec:
  selector:
    app: route-reflector
  ports:
  - port: 80
    name: http
