files/yaml/egress_gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nextensio-egressgateway-REPLACE_SVC_NAME
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - "REPLACE_GW"
