files/yaml/ingress_gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: REPLACE_NAMESPACE
  name: nextensio-ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https-nextensio-agent
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: gw-credential
    hosts:
    - "REPLACE_GW"
  - port:
      number: 80
      name: http2-nextensio-for
      protocol: HTTP2
    hosts:
    - "REPLACE_GW"
