files/yaml/egress_gw_dest.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-REPLACE_SVC_NAME
spec:
  exportTo:
  - "*"
  host: REPLACE_GW
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 80
      tls:
        mode: SIMPLE
