files/yaml/istio_flow_control.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: nextensio-limit-buffering
  namespace: istio-system
spec:
  configPatches:
    - applyTo: CLUSTER
      # If I dont have a match statement and let it just apply to all ports by default (I would like that),
      # it has the undesirable side-effect of forcing ALL cluster ports to http2 - I dont know why !! So
      # I have some cluster ports to handle websocket, and obviously they cant to http2, if there is no
      # explicit match here, my websocket starts getting http2 !! So to prevent that, I explicitly match
      # on the http2 port that I use, port 80. And the match format was a lot of trial and error, I havent
      # seen any document explain how to write a match for cluster, I mean I dont know why a match+cluster
      # is needed when there is already an applyTo: CLUSTER, but without match+cluster+portNumber 
      # combo, it wont really match a specific port
      match:
        cluster:
          portNumber: 80
      patch:
        operation: MERGE
        value:
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options:
                  max_concurrent_streams: 100000
                  initial_stream_window_size: 65536
                  initial_connection_window_size: 65536
          http2_protocol_options:
            initial_stream_window_size: 65536  
            initial_connection_window_size: 65536 
          per_connection_buffer_limit_bytes: 65536
    # There is again a cluster rule here because the above rule only matches port 80
    # and hence the per_connection_buffer_limit_bytes setting there will only apply
    # to port 80. But I want to apply per_connection_buffer_limit_bytes to ALL ports,
    # http2 and non-http2 (web socket in my case). So this rule will apply to all other
    # ports (in my case port 443 websocket) and set their envoy buffer limit
    - applyTo: CLUSTER
      patch:
        operation: MERGE
        value:
          per_connection_buffer_limit_bytes: 65536
    - applyTo: NETWORK_FILTER
      match:
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: MERGE
        value:
          # All envoy example pages say use v3.HttpConnectionManager, but kubectl apply
          # validation complains that the v3 version doesnt have http2 options and such,
          # v2 seems to work fine
          typed_config:
            "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager"
            http2_protocol_options:
              max_concurrent_streams: 100000
              initial_stream_window_size: 65536
              initial_connection_window_size: 65536
            "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
            http2_protocol_options:
              max_concurrent_streams: 100000
              initial_stream_window_size: 65536
              initial_connection_window_size: 65536
    - applyTo: LISTENER
      patch:
        operation: MERGE
        value:
          per_connection_buffer_limit_bytes: 65536
