files/yaml/nextensio_connect_cpod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: nxt-REPLACE_NAMESPACE
  name: connector-vs-connect-REPLACE_POD_NAME
spec:
  gateways:
  - default/nextensio-ingressgateway
  hosts:
  - gateway.nextensio.net
  - REPLACE_GW
  http:
  - match:
    - headers:
        x-nextensio-connect:
          prefix: REPLACE_POD_NAME
    route:
    - destination:
        host: REPLACE_POD_NAME-http-outside
        port:
          number: 443
