files/yaml/nextensio_for_apod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: REPLACE_NAMESPACE
  name: app-vs-REPLACE_POD_NAME
spec:
  gateways:
  - default/nextensio-ingressgateway
  hosts:
  - "REPLACE_GW"
  http:
  - match:
    - headers:
        x-nextensio-for:
          prefix: REPLACE_POD_NAME
    route:
    - destination:
        host: REPLACE_POD_NAME-in
        port:
          number: 80
