files/yaml/nextensio_for_cpod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: nxt-REPLACE_NAMESPACE
  name: connector-vs-for-REPLACE_POD_NAME
spec:
  gateways:
  - default/nextensio-ingressgateway
  hosts:
  - gateway.nextensio.net
  - REPLACE_GW
  http:
  - match:
    - headers:
        x-nextensio-for:
          prefix: REPLACE_POD_NAME
    route:
    - destination:
        host: REPLACE_POD_NAME-in
        port:
          number: 80
