files/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: REPLACE_NAMESPACE
  name: REPLACE_POD_NAME-in
spec:
  selector:
    app: REPLACE_POD_NAME
  ports:
  - port: 80
    name: http2
---
apiVersion: v1
kind: Service
metadata:
  namespace: REPLACE_NAMESPACE
  name: REPLACE_POD_NAME-http-outside
spec:
  selector:
    app: REPLACE_POD_NAME
  ports:
  - port: 8002
    name: http-out
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: REPLACE_NAMESPACE
  name: REPLACE_POD_NAME-in
spec:
  host: REPLACE_POD_NAME-in
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: REPLACE_NAMESPACE
  name: REPLACE_POD_NAME-outside
spec:
  host: REPLACE_POD_NAME-http-outside
