files/yaml/service_apod_out.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nxt-REPLACE_NAMESPACE
  name: REPLACE_POD_NAME-http-outside
spec:
  selector:
    app: REPLACE_POD_NAME
  ports:
  - port: 443
    name: http-out
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: nxt-REPLACE_NAMESPACE
  name: REPLACE_POD_NAME-outside
spec:
  host: REPLACE_POD_NAME-http-outside
