files/yaml/service_cpod_in.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: REPLACE_NAMESPACE
  name: REPLACE_POD_NAME-in
spec:
  selector:
    app: REPLACE_POD_NAME
  ports:
  - port: 80
    name: http2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: REPLACE_NAMESPACE
  name: REPLACE_POD_NAME-in
spec:
  host: REPLACE_POD_NAME-in
